--- a/w6d5/react_widget/index.html
+++ b/w6d5/react_widget/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>React Widgets</title>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <script type="text/javascript" src="./bundle.js"></script>
   </head>
